src/scenes/BlogsScene/styles.scss
.blogs-user {
  &__avatar {
    padding-bottom: 100%;

    &::before {
      content: '';

      position: absolute;
      top: 0;
      bottom: 0;
      left: 0;
      right: 0;

      background-image: linear-gradient(0deg, $green, $green),
        linear-gradient(0deg, rgba(0, 0, 0, 0.44), rgba(0, 0, 0, 0.44));

      opacity: 1;

      mix-blend-mode: color;

      transition: opacity 0.3s ease-in-out;
    }

    &:hover {
      .blogs-user__container {
        opacity: 0;
      }

      &::before {
        opacity: 0;
      }
    }
  }

  &__col {
    @include media-breakpoint-between(sm, lg) {
      @include last-grid-row(2) {
        margin-top: 24px;
      }
    }
  }

  &__col + &__col {
    @include media-breakpoint-down(xs) {
      margin-top: 24px;
    }
  }

  &__container {
    opacity: 1;
    transition: opacity 0.3s ease-in;
  }
  &__name {
    font-size: 18px;
  }
}

.user-pubs {
  margin-left: 10px;
  margin-right: 10px;
  margin-top: -35px;
}

.user-pub {
  & + & {
    border-top: 1px solid $grey-100;
  }

  &__title {
    padding: 15px 10px;

    font-size: 14px;
  }
}

